[gd_scene load_steps=8 format=3 uid="uid://dbl6rol8t55e2"]

[ext_resource type="Script" uid="uid://vrmuj5r511pl" path="res://tweezers.gd" id="1_w0b0y"]
[ext_resource type="Texture2D" uid="uid://cjkji2ehqffjy" path="res://assets/tweezer_spritesheet.png" id="2_ewwud"]
[ext_resource type="Texture2D" uid="uid://5gdnrb2td6ft" path="res://assets/shadow.png" id="2_wl1s3"]
[ext_resource type="AudioStream" uid="uid://co6lupkahkw1q" path="res://assets/sound_effects/tweeze/tweezers-1.mp3" id="3_ewwud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewwud"]
atlas = ExtResource("2_ewwud")

[node name="Tweezers" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_w0b0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1bvp3")

[node name="TweezePlayerDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TweezePlayerDetector"]
shape = SubResource("RectangleShape2D_lquwl")
debug_color = Color(0.986928, 0, 0.318461, 0.42)

[node name="TargetPlayerDetector" type="Area2D" parent="."]
scale = Vector2(17.32, 17.32)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetPlayerDetector"]
shape = SubResource("RectangleShape2D_lquwl")
debug_color = Color(0.888006, 0.107451, 0.753673, 0.42)

[node name="Shadow" type="Node2D" parent="."]
z_index = 1
position = Vector2(0, 4)

[node name="Sprite2D" type="Sprite2D" parent="Shadow"]
modulate = Color(1, 1, 1, 0.223529)
texture_filter = 1
position = Vector2(0, -6)
scale = Vector2(4.53125, 4.53125)
texture = ExtResource("2_wl1s3")

[node name="TweezerVisuals" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
position = Vector2(2, -49)
scale = Vector2(1.3875, 3.34613)
texture = SubResource("AtlasTexture_ewwud")
vframes = 4

[node name="TweezeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ewwud")
volume_db = 24.0
